GVT-3701 Disable redundant warning that can't be fixed yet